--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap");
-/* relative style */
 
+body {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+
+/* relative style */
 .noto-serif {
   font-family: "Noto Serif", serif;
   font-optical-sizing: auto;
@@ -63,4 +70,20 @@
   font-size: 1.37rem;
   font-weight: 400;
 }
+
+/* our plants styles */
+
+.our-plants {
+  max-width: 1140px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.plant-title {
+  font-size: 3.1rem;
+  font-weight: 700;
+  margin: 0;
+  
+}
+
 
