--- a/style/style.css
+++ b/style/style.css
@@ -251,6 +251,101 @@ body {
   border: none;
 }
 
+/* subscribe conten styles */
+
+.subscribe-conten {
+  max-width: 1440px;
+  height: 540px;
+  margin: 120px auto 50px;
+  display: flex;
+}
+
+.subscribe-img {
+  background-image: url(../assets/news-letter-bg.png);
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.subscribe-form {
+  margin-top: 195px;
+  align-items: center;
+}
+
+.subscribe-title {
+  font-size: 3.12rem;
+  font-weight: 700;
+  color: white;
+  margin: 20px auto;
+}
+
+.secount-btn {
+  width: 180px;
+  height: 50px;
+}
+
+#email {
+  width: 640px;
+  height: 50px;
+  padding: 0 20px;
+}
+.sub{
+    width: 186px;
+    height: 50px;
+    background-color: #E95A08;
+    color:white;
+    border: none;
+}
+/* .subscribe-form-section{
+    width: 644px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    padding:0px;
+} */
+/* footer section styles */
+
+.footer-section {
+  max-width: 1120px;
+  height: 250px;
+  display: flex;
+  margin: 50px auto;
+  gap: 110px;
+}
+.footer-title {
+  width: 350px;
+}
+.footer-title-description {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+
+.footer-home {
+  display: flex;
+  text-decoration: none;
+  color: rgba(107, 114, 128, 1);
+  gap: 32px;
+}
+
+.footer-features a {
+  text-decoration: none;
+  color: rgba(107, 114, 128, 1);
+}
+
+.footer-logo {
+  display: flex;
+  gap: 24px;
+}
+
+
+
 
 
 
